[package]
name = "dcc-decode"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "Tool to read EU digital covid certificates"
repository = "https://github.com/Xiphoseer/dcc-decode"

[dependencies]
#asn1_der = "0.7.4"
base45 = "3.0.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
color-eyre = "0.5"
flate2 = "1.0.20"
log = "0.4"
pretty_env_logger = "0.4"
ring = "0.16"
serde_cbor = "0.11"
serde_cose = "0.1"
serde_json = "1.0.64"
serde = "1.0.14"
x509-parser = "0.9.2"
once_cell = "1.8"